package com.pokedex.bff.domain.model

data class EggGroup(
    val id: Long,
    val name: String
)
